fix(css): blocs pre sur petits écrans : white-space = pre-wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -606,7 +606,7 @@ hr:last-child {
 	pre {
 		margin: 2em auto;
 		max-width: 75vw;
-		white-space: pre-line;
+		white-space: pre-wrap;
 	}
 	code {
 		word-break: break-word;
